FIN-29-test: added tests for Favorites and OrderItems (Controller, DTO, Model, Mapper, Repository, Service)